# AjedrezMVC

./: pyproject.toml
ajedrez/: db.sqlite3
ajedrez/Partidas/: consumers.py  models.py  planificacion.txt  routing.py  urls.py  views.py
ajedrez/Partidas/migrations/: 0001_initial.py
ajedrez/Partidas/static/js/: aceptarInvitacion.js  administradorDeElementosHTML.js  administradorDeEventosDePartida.js  administradorDeInterfazDeTablero.js  casilla.js  invitarAPartida.js  jugada.js  jugador.js  main.js  partida.js  pieza.js  piezaFactory.js  tablero.js  testing.js  validadorDeJugadas.js
ajedrez/Partidas/static/js/conexionwebsocket/: administradorDeConexionWebsocket.js  administradorDeMensajesWebsocket.js
ajedrez/Partidas/templates/: invitacionesPendientes.html  invitarAPartida.html  partida.html
ajedrez/Usuarios/: urls.py  views.py
ajedrez/Usuarios/migrations/: 0001_initial.py
ajedrez/Usuarios/static/js/: logearUsuario.js
ajedrez/Usuarios/templates/: registrarUsuario.html
ajedrez/ajedrez/: asgi.py  configuracion.py  reiniciarBaseDeDatos.py  settings.py  urls.py  wsgi.py
ajedrez/static/estilos/: estilos.css
ajedrez/static/js/: funcionesAuxiliares.js
ajedrez/templates/: index.html
