[tool.poetry]
name = "ajedrezmvc"
version = "0.1.0"
description = "MVC de partidas de ajedrez"
authors = ["AndresLarrondobuno <andreslarrondobuno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
django-channels = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
