[tool.poetry]
name = "ajedrezmvc"
version = "0.1.0"
description = "MVC de partidas de ajedrez"
authors = ["AndresLarrondobuno <andreslarrondobuno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
channels = "4.0.0"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
